Fix for iOS blurry image...?

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -12,7 +12,7 @@ body > header {
 
     background-image: url(../images/background4.jpg);
     background-size: cover;
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
 
     border: 4px solid black;
     box-shadow: 
